--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -185,7 +185,21 @@ label.form-check-label {
     font-weight: 600;
     color: tomato;
 }
-
+.form-group .form-check-inline .form-check-label {
+    padding-left: 20px;
+}
+.form-check-inline .form-check-input {
+    position: absolute;
+    top: -2px;
+    margin-top: 9px;
+    margin-right: .3125rem;
+    margin-left: -20px;
+}
+input[type=checkbox], input[type=radio] {
+    width: 16px;
+    margin-top: 6px;
+    height: calc(5px + 0px + 13px);
+}
 
 
 
